<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_alignParentBottom="true">

     <item   
        android:title="Search"
        android:id="@+id/searchIcon"
        app:showAsAction="ifRoom|withText"
        app:actionViewClass="android.widget.SearchView" />
        
    <item
        android:id="@+id/useravatar_menu_item"
        app:showAsAction="ifRoom"
        android:scaleType ="centerCrop"
        app:actionLayout="@layout/profile_menu_layout"
        android:title="" />
    <item
        android:id="@+id/username_menu_item"
        app:showAsAction="always"
        android:title="" />
    <item
        app:showAsAction="always"
        android:icon="@drawable/ic_more"
        android:title="">
        <menu>
            <item
                android:id="@+id/show_profile"
                android:icon="@drawable/account"
                android:title="@string/view_profile"
                app:showAsAction="never"/>
            <item
                android:id="@+id/Settings"
                android:icon="@drawable/ic_settings_outline"
                android:title="@string/settings"
                app:showAsAction="never"/>
            <item
                android:id="@+id/log_out_menu_item"
                android:icon="@drawable/ic_logout_variant"
                android:title="@string/log_out"
                app:showAsAction="never"/>
        </menu>
    </item>

</menu>