<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/container">

    <LinearLayout
        android:id="@+id/editpasswordview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/current_password"
                android:textSize="30sp" />

            <EditText
                android:id="@+id/oldpassword"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="30sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"

            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/new_password"
                android:textSize="30sp" />

            <EditText
                android:id="@+id/newpassword"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="30sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/confirm_password"
                android:textSize="30sp" />

            <EditText
                android:id="@+id/vnewpassword"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="30sp" />
        </LinearLayout>

        <Button
            android:id="@+id/updatepassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/change_password"
            android:backgroundTint="@color/primary"/>
    </LinearLayout>
</ScrollView>